Adding icons and style file to main view
- Added an icons file inside assets. all the icons used inside the side
  menu of the main view is defined there. App.axaml and csproj modified to use this
file
- added a dir inside Assets to contain all the style files of the view
- added main view style file

--- a/KeyConcealment/KeyConcealment/KeyConcealment.csproj
+++ b/KeyConcealment/KeyConcealment/KeyConcealment.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <AvaloniaXaml Remove="Assets/Icons.axaml" />
+    <AvaloniaXaml Remove="Assets/ViewStyles/MainViewStyle.axaml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
