--- a/KeyConcealment/KeyConcealment/KeyConcealment.csproj
+++ b/KeyConcealment/KeyConcealment/KeyConcealment.csproj
@@ -22,5 +22,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.1.6" />
   </ItemGroup>
 </Project>
