Implementing Style oraganization changes and masterView
- Master view implemented
- login view: added UserInputStyle as StyleInclude

--- a/KeyConcealment/KeyConcealment/KeyConcealment.csproj
+++ b/KeyConcealment/KeyConcealment/KeyConcealment.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <AvaloniaXaml Remove="Assets/Icons.axaml" />
     <AvaloniaXaml Remove="Assets/ViewStyles/MainViewStyle.axaml" />
+    <AvaloniaXaml Remove="Assets/ViewStyles/UserInputStyle.axaml" />
   </ItemGroup>
 
   <ItemGroup>
