--- a/KeyConcealment/KeyConcealment/KeyConcealment.csproj
+++ b/KeyConcealment/KeyConcealment/KeyConcealment.csproj
@@ -12,12 +12,14 @@
   
   <ItemGroup>
     <AvaloniaXaml Remove="Assets/Icons.axaml" />
+    <AvaloniaXaml Remove="Assets/ViewStyles/CredsViewStyle.axaml" />
     <AvaloniaXaml Remove="Assets/ViewStyles/MainViewStyle.axaml" />
     <AvaloniaXaml Remove="Assets/ViewStyles/UserInputStyle.axaml" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.1.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="$(AvaloniaVersion)" />    
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
